# Embeded-Sensor

./: .gitignore  CMakeLists.txt  README.md  buffer_manip.c  embeded.c  embeded.h  interactions.c
include/: address.h  buffer_manip.h  device_io.h  errors.h  functions.h  scd40_buffer_manip.h  scd40_device_io.h  scd40_functions.h  sen55_buffer_manip.h  sen55_device_io.h  sen55_functions.h
include/SCD40/: scd40_buffer_manip.h  scd40_device_io.h  scd40_functions.h
include/SEN55/: sen55_buffer_manip.h  sen55_device_io.h  sen55_functions.h
src/: CMakeLists.txt  buffer_manip.c  device_io.c  functions.c  main.c  publisher.c  scd40_buffer_manip.c  scd40_device_io.c  scd40_functions.c  sen55_buffer_manip.c  sen55_device_io.c  sen55_functions.c
src/SCD40/: scd40_buffer_manip.c  scd40_device_io.c  scd40_functions.c
src/SEN55/: sen55_buffer_manip.c  sen55_device_io.c  sen55_functions.c
test/: CMakeLists.txt  buffer_manip_tests.c
